Overflow fix to remove scrollbar on index page:

--- a/css/gorilla.scss
+++ b/css/gorilla.scss
@@ -17,7 +17,12 @@ body {
   font-size: 90%;
   line-height: 1.5;
   webkit-backface-visibility: hidden;
-  -webkit-font-smoothing: antialiased; }
+  -webkit-font-smoothing: antialiased;
+}
+
+html.fullscreen {
+  overflow: hidden;
+}
 
 h1, h2, h3, h4, h5, h6 {
   @include sans-serif;
